# Engine

./: .gitignore  Engine.sln  README.md  ignore.gitignore
Engine/: CMakeLists.txt  DefaultLayout.ini  Engine.vcxproj  Engine.vcxproj.filters  imgui.ini
Engine/Headers/: Backend.h  Camera.h  Component.h  Editor.h  Entity.h  FrameBuffer.h  ImGuizmo.h  Light.h  Logging.h  Material.h  Mesh.h  Model.h  ModelManager.h  RObject.h  RenderPipeline.h  Shader.h  SystemIcons.h  TextureLoader.h  Transform.h  Util.h
Engine/Models/: Blockert.fbx  Monkey.mtl  Paveway.mtl  Room.fbx  Table.mtl  Test.mtl  backpack.mtl  imgui.ini
Engine/Shaders/: EmptyFragment.frag  LitMaterial_Shader.frag  LitMaterial_Shader.vert  borderOutline.frag  fragment_shader.frag  lightSource.frag  lightSource.vert  shaderSingleColor.frag  shaderSingleColor.vert  vertex_shader.vert
Engine/dependencies/imgui/imgui-master/backends/: imgui_impl_glfw.cpp
Engine/dependencies/include/assimp/: config.h  defs.h
Engine/dependencies/include/glad/: glad.h
Engine/dependencies/include/imgui/imgui-master/backends/: imgui_impl_glfw.cpp
Engine/dependencies/include/physx/extensions/: PxCustomGeometryExt.h
Engine/dependencies/lib/: fmtd.lib  freetyped.lib
Engine/src/: Backend.cpp  Component.cpp  Editor.cpp  Entity.cpp  ImGuizmo.cpp  Mesh.cpp  Model.cpp  ModelManager.cpp  RObject.cpp  RenderPipeline.cpp  Source.cpp  SystemIcons.cpp  TestSource.cpp  TextureLoader.cpp  Util.cpp  glad.c
Engine/x64/Debug/: Engine.exe.recipe  Engine.ilk  Source.nativecodeanalysis.sarif  vc143.idb
Engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
